--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-		<div class="js-fullheight colorlib-table">
+		<!--<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
 				<div class="row">
 					<div class="col-md-12">
@@ -78,7 +78,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<!-- <h2 class="head-title">Works</h2>
+						 <h2 class="head-title">Works</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
@@ -90,11 +90,11 @@
 						</a>
 						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
 							<span><i class="icon-search3"></i></span>
-						</a> -->
+						</a> 
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 	</nav>
 	
 	<div id="colorlib-page">
@@ -105,7 +105,7 @@
 						<div class="colorlib-navbar-brand">
 							<a class="colorlib-logo" href="index.html"><span>Ruchika</span><span></span></a>
 						</div>
-						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+						<a href="#" class=" colorlib-nav-toggle"><i></i></a><!--js-colorlib-nav-toggle-->
 					</div>
 				</div>
 			</div>
