--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>Ruchika</span><span></span></a>
+							<a class="colorlib-logo" href="index.html"><span>Portfolio</span><span></span></a>
 						</div>
 						<a href="#" class=" colorlib-nav-toggle"><i></i></a><!--js-colorlib-nav-toggle-->
 					</div>
@@ -910,18 +910,18 @@
 		<div id="colorlib-blog">
 			<div class="container" id="blog">
 				<div class="row text-center">
-					<h2 class="bold">Blog</h2>
+					<h2 class="bold">Reels</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Blog</span>
-						<h2>Read Our Case</h2>
+						<span>Reels</span>
+						<h2>Reel ideation & execution</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Our Blog</h2>
+							<h2 class="heading">Reels work</h2>
 						</div>
 					</div>
 				</div>
@@ -930,17 +930,22 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
-										<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+									<!-- <a href="blog.html" class="blog-img"> -->
+										<video width="100%" height="450" controls>
+											<source src="./video/moreishfoods-reel-Cnbz-4eD_gF.mp4" type="video/mp4">
+											<source src="movie.ogg" type="video/ogg">
+										  Your browser does not support the video tag.
+										  </video>
+										<!-- <img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
-										</div>
-									</a>
+										</div> -->
+									<!-- </a> -->
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<!-- <span class="meta">15, Feb 2018</span> -->
+										<h2><a href="#">Moriesh Foods</a></h2>
+										<!-- <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p> -->
 									</div>
 								</div>
 							</div>
@@ -948,17 +953,22 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
-										<img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
-										<div class="overlay"></div>
+									<!-- <a href="#" class="blog-img"> -->
+										<!-- <img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com"> -->
+										<video width="100%" height="450" controls>
+											<source src="./video/atlaseventsindia-reel-CZcYCg7hum8.mp4" type="video/mp4">
+											<source src="movie.ogg" type="video/ogg">
+										  Your browser does not support the video tag.
+										  </video>
+										<!-- <div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
-										</div>
-									</a>
+										</div> -->
+									<!-- </a> -->
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<!-- <span class="meta">15, Feb 2018</span> -->
+										<h2><a href="#">Atlas Events</a></h2>
+										<!-- <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p> -->
 									</div>
 								</div>
 							</div>
@@ -966,17 +976,68 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
-										<img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+									<!-- <a href="#" class="blog-img"> -->
+										<video width="100%" height="450" controls >
+											<source src="./video/adra.mp4" type="video/mp4">
+											<source src="movie.ogg" type="video/ogg">
+										  Your browser does not support the video tag.
+										  </video>
+										<!-- <img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
-										</div>
-									</a>
+										</div> -->
+									<!-- </a> -->
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<!-- <span class="meta">15, Feb 2018</span> -->
+										<h2><a href="#">Adra</a></h2>
+										<!-- <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p> -->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="col-md-12">
+								<div class="article">
+									<!-- <a href="#" class="blog-img"> -->
+										<video width="100%" height="450" controls >
+											<source src="./video/kaaram.mp4" type="video/mp4">
+											<source src="movie.ogg" type="video/ogg">
+										  Your browser does not support the video tag.
+										  </video>
+										<!-- <img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+										<div class="overlay"></div>
+										<div class="link">
+											<span class="read">Read more</h2>
+										</div> -->
+									<!-- </a> -->
+									<div class="desc">
+										<!-- <span class="meta">15, Feb 2018</span> -->
+										<h2><a href="#">kaaram</a></h2>
+										<!-- <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p> -->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="col-md-12">
+								<div class="article">
+									<!-- <a href="#" class="blog-img"> -->
+										<video width="100%" height="450" controls >
+											<source src="./video/awrun.mp4" type="video/mp4">
+											<source src="movie.ogg" type="video/ogg">
+										  Your browser does not support the video tag.
+										  </video>
+										<!-- <img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+										<div class="overlay"></div>
+										<div class="link">
+											<span class="read">Read more</h2>
+										</div> -->
+									<!-- </a> -->
+									<div class="desc">
+										<!-- <span class="meta">15, Feb 2018</span> -->
+										<h2><a href="#">Aawrun</a></h2>
+										<!-- <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p> -->
 									</div>
 								</div>
 							</div>
