--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
 						</div>
 						<div class="col-md-4 col-pb-sm">
 							<h2>Quick Links</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
+							<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p> -->
 							<a>Home</a><br>
 							<a>Experience</a><br>
 							<a>Skills</a><br>
