--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 									<br>See you soon stranger.</p>
 								<!-- <p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p> -->
 								<p class="colorlib-social-icons">
-									<a href="https://www.instagram.com/curateitwithruchika/"><i class="icon-instagram"></i></a>
+									<a href="https://www.instagram.com/lifeofrururuchika/"><i class="icon-instagram"></i></a>
 									
 									<a href="https://in.linkedin.com/in/ruchika-daga-50b22a203"><i class="icon-linkedin"></i></a>
 									
