--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 				<div class="row">
 					<div class="col-md-3">
 						<div class="work-entry animate-box">
-							<a href="https://instagram.com/peptidusa?igshid=YmMyMTA2M2Y=" class="work-img" style="background-image: url(images/peptid.jpeg); background-repeat: no-repeat; background-size: contain;">
+							<a href="https://www.instagram.com/anmolindustriesltd/" class="work-img" style="background-image: url(images/4.png); background-repeat: no-repeat; background-size: contain;">
 								<!-- <div class="display-t">
 									<div class="work-name">
 										<h2>Pursuing Best</h2>
@@ -504,7 +504,7 @@
 							<div class="col-md-12 col-md-offset-">
 								<div class="desc">
 									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
-									<p class="read"><a href="https://instagram.com/peptidusa?igshid=YmMyMTA2M2Y=">Click to View </a></p>
+									<p class="read"><a href="https://www.instagram.com/anmolindustriesltd/">Click to View </a></p>
 								</div>
 							</div>
 						</div>
