--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 					<div class="col-md-5 animate-box">
 						<div class="owl-carousel3">
 							<div class="item">
-								<img class="img-responsive about-img" src="images/updateddp.jpeg" alt="html5 bootstrap template by colorlib.com">
+								<img class="img-responsive about-img" src="images/main image.jpg" alt="html5 bootstrap template by colorlib.com">
 							</div>
 							<div class="item">
-								<img class="img-responsive about-img" src="images/updateddp.jpeg" alt="html5 bootstrap template by colorlib.com">
+								<img class="img-responsive about-img" src="images/main image.jpg" alt="html5 bootstrap template by colorlib.com">
 							</div>
 						</div>
 					</div>
@@ -194,6 +194,21 @@
 										</div>
 									</div>
 									<div class="col-md-12">
+
+										<div class="services animate-box">
+											<h3>Meraqi Digital, Kolkata — Senior Social Media Manager</h3>
+											<h6>August 2024 - PRESENT</h6>
+											<p>Leading a team of social media professionals, overseeing their work, providing guidance, and ensuring that everyone is aligned with the brand's goals. Additionally, involved in pitching for new clients, showcasing our expertise and demonstrating how our team can help businesses achieve their social media objectives. While still handling some of the core tasks like content creation for brands, community management, and analytics, shift towards strategic planning, team development, and business growth.</p>
+											
+										</div>
+										<div class="services animate-box">
+											<h3>Meraqi Digital, Kolkata — Social Media Manager</h3>
+											<h6>March 2023 - August 2024</h6>
+											<p>It's a dynamic role that requires creativity, analytical skills, and a deep understanding of social media platforms. From creating captivating content to managing online communities and tracking analytics, it's a crucial role in helping account managers and their brands achieve their goals in the digital age.</p>
+											
+										</div>
+
+
 										<div class="services animate-box">
 											<h3>TriosCo, Kolkata — Senior Account Manager</h3>
 											<h6>MARCH 2019 - PRESENT</h6>
