--- a/index.html
+++ b/index.html
@@ -370,6 +370,18 @@
 												<li>Print Design</li>
 											</ul>
 										</div>
+										<!-- <div class="services animate-box">
+											<h3>2 - Communication</h3>
+											<ul>
+												<li>English Proficiency (Spoken)</li>
+												<li>Intermediate English Proficiency (Written) Intermediate</li>
+												 <li>English</li> 
+												<li>Hindi</li>
+												<li>Bengali</li>
+											</ul>
+										</div> -->
+									</div>
+									<div class="col-md-6">
 										<div class="services animate-box">
 											<h3>2 - Communication</h3>
 											<ul>
@@ -380,22 +392,6 @@
 												<li>Bengali</li>
 											</ul>
 										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="services animate-box">
-											<h3>3 - Other Skills</h3>
-											<ul>	
-												<li>Problem solving </li>
-												<li>Critical Thinking </li>
-												<li>Attention to detail</li>
-												<li>Project Management</li>
-												<li>PR Relations</li>
-												<li>Decision Making</li>
-												<li>Multitasking</li>
-												<li>Time Management</li>
-											</ul>
-											
-										</div>
 										<!-- <div class="services animate-box">
 											<h3>4 - Web Marketing</h3>
 											<ul>
@@ -404,6 +400,23 @@
 												<li>eCommerce</li>
 											</ul>
 										</div> -->
+									</div>
+									<div class="col-md-12">
+										<div class="services animate-box">
+
+										<h3>3 - Other Skills</h3>
+										<ul>
+											<li><b>Creativity:</b> Ability to develop engaging and visually appealing content.<br></li>
+												<li><b>Communication:</b> Strong written and verbal communication skills to interact with the audience and build relationships.<br></li>
+													<li><b>Analytical Thinking:</b> Ability to analyze data and metrics to measure performance and make informed decisions.<br></li>
+														<li><b>Adaptability:</b> Keeping up with the constantly evolving social media landscape and adapting strategies accordingly.<br></li>
+															<li>	<b>Time Management:</b> Efficiently managing multiple tasks and deadlines.<br></li>
+																<li>	<b>Teamwork:</b> Collaborating with other team members and external stakeholders.<br></li>
+																	<li>		<b>Problem-Solving:</b> Identifying and addressing challenges related to social media campaigns and strategies.<br></li>
+																		<li>		<b>Technical Proficiency:</b> Understanding of various social media platforms and tools.<br></li>
+																			<li>			<b>Customer Service:</b> Providing excellent customer service and addressing inquiries promptly.<br></li>
+																				<li>			<b>Brand Awareness:</b> Understanding the brand's identity, values, and target audience.</li>
+									</ul></div>
 									</div>
 								</div>
 							</div>
@@ -423,7 +436,7 @@
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
 						<span>Positions of Responsibility </span>
-						<p>Photoshoot, direction and planning. Social Media Marketing. Influencer Marketing. Client handling.</p>
+						<p>Team handling, photoshoot, direction and planning, social media marketing, influencer marketing, client handling, business development, cntent creation and strategy, community management, analytics and reporting, brand advocacy, crisis management, platform optimization: Staying up-to-date with social media trends and best practices to optimize platform performance, client acquisition, cross-functional collaboration</p>
 						<h2>Clients handled – </h2>
 					</div>
 				</div>
